--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,14 @@ code {
   animation-duration: 0.2s;
 }
 
+.slide-top-animation {
+  animation: SlideTopIn 0.3s forwards;
+}
+
+.slide-top-out-animation {
+  animation: SlideTopOut 0.3s forwards;
+}
+
 @keyframes HeroModalContent {
   from {
     top: 100vh;
@@ -92,6 +100,28 @@ code {
     opacity: 1;
   }
   to {
+    opacity: 0;
+  }
+}
+
+@keyframes SlideTopIn {
+  from {
+    transform: translateY(100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes SlideTopOut {
+  from {
+    /* transform: translateY(0); */
+    opacity: 1;
+  }
+  to {
+    /* transform: translateY(100%); */
     opacity: 0;
   }
 }
